# bus-extension

./: .envrc  .gitignore  Cargo.toml  README.md  bus-script.py  default.nix  flake.nix  manifest.json  package.sh  shell.nix  todo.txt  update.sh  wasm-bindgen-cli.nix
.github/: dependabot.yml
extension/: manifest.json  script.js
src/: haversine.rs  history.rs  lib.rs  main.rs  positions.rs
