[package]
name = "bus-extension"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.106"

[dependencies.web-sys]
features = ["Document", "Element", "HtmlInputElement", "Location", "Window"]
version = "0.3.83"
