[package]
name = "bus-extension"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-storage = "0.4.0"
gloo-timers = "0.4.0"
gloo-utils = "0.3.0"
jiff = { version = "0.2.23", features = ["js", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.108"

[dependencies.web-sys]
features = [
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlCollection",
    "HtmlElement",
    "HtmlInputElement",
    "Location",
    "Window",
]
version = "0.3.83"
